kubernates/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-service
spec:
  selector:
    app: ecommerce
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30080  # Custom NodePort (optional, must be between 30000-32767)
  type: NodePort
